--- a/build.gradle
+++ b/build.gradle
@@ -152,6 +152,7 @@ ext['snakeyaml.version'] = '2.2'
 dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
   implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.9'
@@ -173,6 +174,8 @@ dependencies {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
+  implementation 'org.flywaydb:flyway-core'
+  runtimeOnly 'org.postgresql:postgresql'
 }
 
 mainClassName = 'uk.gov.hmcts.reform.dev.Application'
