--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,12 @@ dependencies {
   }
   implementation 'org.flywaydb:flyway-database-postgresql'
   runtimeOnly 'org.postgresql:postgresql'
+  implementation 'org.springframework.boot:spring-boot-starter-security'
+//  testImplementation 'org.springframework.security:spring-security-test'
+  implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+//  testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:3.0.4'
 }
 
 mainClassName = 'uk.gov.hmcts.reform.dev.Application'
